css/atlas.css
.atlas {
  position: relative;
}

/* Formatting for Dom overlays. */
.atlas .overlay {
  position: absolute;
  background-color: rgba(255, 255, 255, 0.8);
  padding: 5px;
  vertical-align: middle;
}

.atlas .overlay .hidden {
  display: none;
}

.atlas .remove-overlay {
  /* this is a bit of a hack */
  position: absolute;
  top: 5px;
  right: 0;
  display: none;
}

.atlas .overlay-title:hover > button {
  display: block;
}

/* Formatting for Projection legend titles. */
.atlas .overlay-title {
  font-size: 1.2em;
}

.atlas .legend .overlay-title {
  font-size: 1em;
  font-weight: normal;
  font-variant: small-caps;
}

.atlas .legend-caption {
  font-size: 0.8em;
  text-align: right;
}

/* The 'table' selector is inefficient :( */
.atlas .overlay.legend table {
  margin: 5px;
  line-height: 150%;
  border-collapse: collapse;
  text-align: right;
  font-size: 0.9em;
  font-family: "Consolas", monospace;
}

